main - get/flush cache endpoints.
